<resources>
    <string name="app_name">Weather</string>
    <string name="city_field">Vladimir</string>
    <string name="time_field">05.10.2020</string>
    <string name="temp_field">15C</string>
    <string name="information">Additional Information</string>
    <string name="default_city">Moscow</string>
    <string name="night_theme">Night theme</string>
    <string name="info">information</string>
    <string name="language">Enter the city in English</string>
    <string name="setting">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>